# silicon

./: .gitignore  .silicon.toml.example  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
action/: README.md  action.yml
bench/correct/: adc_enable.c  clock_gpout_auxsrc.c  pll_fbdiv.c  resets_deassert.c  sample_pll_gpio.c  sio_multipin.c  uart0_baud.c  usb_pll_setup.c
bench/hallucinated/: clock_gpout_auxsrc_bad_enum.c  pll_fbdiv_too_wide.c
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: cli.rs
crates/checker/: Cargo.toml
crates/checker/src/: lib.rs
crates/checker/tests/: planted_bugs.rs
crates/fw-parse/: Cargo.toml
crates/fw-parse/src/: lib.rs
crates/fw-parse/tests/: sample_firmware.rs
crates/report/: Cargo.toml
crates/report/src/: lib.rs
crates/svd-model/: Cargo.toml
crates/svd-model/src/: lib.rs
demo/: CMakeLists.txt  README.md  blink_correct.c  blink_hallucinated.c
vscode/: package.json
vscode/src/: extension.ts
